Minor edits in code and book
While doing some work, a few minor corrections were found here and there in
the code and the book. Here is a summary of the major points:

 - In MakeCatalog's `parse_objects', we were incorrectly incrementing the
   pointers by checking the whole dataset size instead of the tile size. On
   a 2D image, this causes no problem, but it can be confusing.

 - To let the users know that the Sky was subtracted in MakeCatalog, a
   message is now printed if it isn't in `quiet' mode.

 - The old "MakeCatalog output columns" and "MakeCatalog output file"
   sections of the book are now renamed to "MakeCatalog measurements" and
   "MakeCatalog output" to avoid confusion (both having the term "output"
   in them). Both sections were also edited to be more clear.

 - `gal_data_copy_to_allocated' also copies (and frees any that might
   already be allocated) string meta-data.

--- a/NEWS
+++ b/NEWS
@@ -92,6 +92,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     --meanmedqdiff: new name for `--modmedqdiff'. Similar to NoiseChisel.
 
   Library:
+    - gal_data_copy_to_allocated: Also copies string metadata (e.g., name).
     - gal_fits_key_write: filename and hdu instead of FITS pointer.
     - gal_fits_key_write_version: filename and hdu instead of FITS pointer.
     - gal_fits_key_write_filename: write at the top or end of the input list.
