New --numhdus option in Fits prints number of extensions/HDUs
This new option will print the number of extensions in a FITS file (and
nothing else). The thought of it actually came up as I was writing a script
myself and noticed the lack of a simple step like this in my script.

I also noticed that we weren't closing the opened FITS file in
`fits_print_extension_info'. So this is also corrected.

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   Arithmetic:
     --onedasimage: write output as an image if it has one dimension, not table.
 
+  Fits:
+    --numhdus: prints the number of HDUs in the given FITS file.
+
   NoiseChisel:
     - New outlier identification algorithm for quantile thresholds. This is
       very useful when there are extended and bright sources in the
