--- a/NEWS
+++ b/NEWS
@@ -105,6 +105,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #54526: Invalid r, q and truncation of point profiles in MakeProfiles.
   bug #54579: NoiseChisel pseudo-detection failure when dataset is negative.
   bug #54782: Segment's check image not removing sky clumps some tiles.
+  bug #54810: Arithmetic crash when previously named operand renamed.
 
 
 
