Minor corrections in book
A few typos were corrected in the book and my email address was also
corrected in the "Copyright assignment" section.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -2911,7 +2911,7 @@ omatter  0.3
 You can now tell CosmicCalculator to read this file for option values
 immediately using the @option{--config} option as shown below. Do you see
 how the output of the following command corresponds to the option values in
-@file{my-cosmology.txt} (previous command)?
+@file{my-cosmology.conf} (previous command)?
 
 @example
 $ astcosmiccal --config=my-cosmology.conf -z2
@@ -2976,9 +2976,9 @@ $ astwarp flat-ir/xdf-f160w.fits --rotate=20
 @end example
 
 @noindent
-Open the output and see the output. If your final image is already aligned
-with RA and Dec, you can simply use the @option{--align} option and let
-Warp calculate the necessary rotation.
+Open the output and see it. If your final image is already aligned with RA
+and Dec, you can simply use the @option{--align} option and let Warp
+calculate the necessary rotation and apply it.
 
 Warp can generally be used for any kind of pixel grid manipulation
 (warping). For example the outputs of the commands below will respectively
@@ -30277,7 +30277,7 @@ completely rely.
 @end quotation
 
 Please get in touch with the Gnuastro maintainer (currently Mohammad
-Akhlaghi, akhlaghi -at- gnu -dot- org) to follow the procedures. It is
+Akhlaghi, mohammad -at- akhlaghi -dot- org) to follow the procedures. It is
 possible to do this for each change (good for for a single contribution),
 and also more generally for all the changes/additions you do in the future
 within Gnuastro. So if you have already assigned the copyright of your work
