Relative extension of range in automatic binning in Statistics lib
In order to count the last element when estimating the bin range
automatically, Until now, in `gal_statistics_regular_bins' we would simply
add 1e-6 to the maximum value. This would cause problems when the range of
the dataset is smaller than that (for example when using angestroms). Using
a very small value was also not possible, because of floating point errors.

So now, the histogram function uses a different check when it is
considering the last bin. This fixes all the complications above.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -27622,10 +27622,18 @@ shifted to accommodate this request.
 @deftypefun {gal_data_t *} gal_statistics_histogram (gal_data_t @code{*input}, gal_data_t @code{*bins}, int @code{normalize}, int @code{maxone})
 Make a histogram of all the elements in the given dataset with bin values
 that are defined in the @code{inbins} structure (see
-@code{gal_statistics_regular_bins}). @code{inbins} is not mandatory, if you
-pass a @code{NULL} pointer, the bins structure will be built within this
-function based on the @code{numbins} input. As a result, when you have
-already defined the bins, @code{numbins} is not used.
+@code{gal_statistics_regular_bins}, they currently have to be equally
+spaced). @code{inbins} is not mandatory, if you pass a @code{NULL} pointer,
+the bins structure will be built within this function based on the
+@code{numbins} input. As a result, when you have already defined the bins,
+@code{numbins} is not used.
+
+Let's write the center of the @mymath{i}th element of the bin array as
+@mymath{b_i}, and the fixed half-bin width as @mymath{h}. Then element
+@mymath{j} of the input array (@mymath{in_j}) will be counted in
+@mymath{b_i} if @mymath{(b_i-h) \le in_j < (b_i+h)}. However, if
+@mymath{in_j} is somewhere in the last bin, the condition changes to
+@mymath{(b_i-h) \le in_j \le (b_i+h)}.
 @end deftypefun
 
 
