Statistics will use the single column when input has only one
When the input only has one column, it is redundant to explicitly has for
the column to use. However, until now, it would complain if no column was
specified. With this commit, if the input table only has one column, it
will just use it and won't complain.

--- a/NEWS
+++ b/NEWS
@@ -51,7 +51,13 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
           across the image.
 
   Statistics:
-    - Sky estimation: new outlier estimation algorithm similar to NoiseChisel.
+    - If an input table has only one column, Statistics won't complain and
+      abort when no `--column' (`-c') is given: there is only one column to
+      use anyway, so it will be used. In the absence of which column to
+      use, it will still complain and abort if the input has more than one
+      column.
+    - Sky estimation: new outlier estimation algorithm similar to
+      NoiseChisel.
 
   Library:
     - gal_blank_flag_apply: Set all flagged/masked elements to blank.
